--- a/src/main/resources/templates/Staff/editUser.html
+++ b/src/main/resources/templates/Staff/editUser.html
@@ -50,7 +50,7 @@
                     <div class="form-group col-md-5 ">
                         <label>Email</label>
                         <input class="form-control" type="text" id="email"
-                               name="email" th:value="${email}" required="required"
+                               name="email" th:value="${phone}" required="required"
                         />
                     </div>
                 </div>
