--- a/src/main/resources/templates/Admin/editUser.html
+++ b/src/main/resources/templates/Admin/editUser.html
@@ -41,7 +41,16 @@
                         />
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-5 dropdown">
+                        <select class="form-control" style="width:auto" name="user.role" th:field="*{role}">
 
+                            <option th:value="1" th:text="Admin"></option>
+                            <option th:value="2" th:text="Staff"></option>
+                            <option th:value="3" th:text="Trainer"></option>
+                        </select>
+                    </div>
+                </div>
                 <br/>
                 <div class=" row-border">
                     <div class="col-md-6 col-xs-offset-4">
