--- a/src/main/resources/templates/Admin/addUser.html
+++ b/src/main/resources/templates/Admin/addUser.html
@@ -35,8 +35,7 @@
                         <br/>
                         <div class="row">
                             <div class="col-md-5 dropdown">
-                                <select class="form-control" style="width:auto" name="user.role" th:field="*{role}">
-
+                                <select class="form-control" style="width:auto" name="role" th:field="*{role}">
                                     <option th:value="1" th:text="Admin"></option>
                                     <option th:value="2" th:text="Staff"></option>
                                     <option th:value="3" th:text="Trainer"></option>
