--- a/src/main/resources/templates/Staff/addCategory.html
+++ b/src/main/resources/templates/Staff/addCategory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml"
-      layout:decorator="Layout/AdminLayout">
+      layout:decorator="Layout/StaffLayout">
 <head>
     <meta charset="UTF-8"/>
     <title>Thêm category</title>
