--- a/src/main/resources/templates/Staff/user_list.html
+++ b/src/main/resources/templates/Staff/user_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-    layout:decorator="Layout/AdminLayout">
+      layout:decorator="Layout/StaffLayout">
 
 <head>
     <meta charset="UTF-8" />
@@ -34,7 +34,7 @@
                                     <th>NO</th>
                                     <th>Email </th>
                                     <th></th>
-                                    <th>Thay đổi mật khẩu</th>
+                                    <th>Thay đổi thông tin</th>
                                     <th>Xóa</th>
                                 </tr>
                             </thead>
