--- a/src/main/resources/templates/Layout/StaffLayout.html
+++ b/src/main/resources/templates/Layout/StaffLayout.html
@@ -70,13 +70,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" th:href="@{/home/staff}">Phần mềm </a>
+            <a class="navbar-brand" th:href="@{/home/staff}">Phần mềm quản lý Trainer</a>
         </div>
         <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
-
-
             <!-- /.dropdown -->
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -127,6 +125,10 @@
                             </li>
                         </ul>
                         <!-- /.nav-second-level -->
+                    </li>
+                    <li>
+                        <a th:href="@{/home/staff/search-user}"><i class="fa fa-home" aria-hidden="true"></i>Tìm
+                            kiếm</a>
                     </li>
                 </ul>
             </div>
