--- a/src/main/resources/templates/Staff/Search.html
+++ b/src/main/resources/templates/Staff/Search.html
@@ -4,24 +4,24 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Chỉnh sửa tài khoản</title>
+    <title>Tìm kiếm</title>
 </head>
-
 <body>
 <div class="container " layout:fragment="content">
     <div class="starter-template">
-        <h1>Spring Boot AJAX Example</h1>
-
         <div id="feedback"></div>
-
         <form class="form-horizontal" id="search-form">
             <div class="form-group form-group-lg">
-                <label class="col-sm-2 control-label">Username</label>
-                <div class="col-sm-10">
+                <label class="col-sm-2 control-label">Thông tin tìm kiếm</label>
+                <div class="col-sm-7">
                     <input type="text" class="form-control" id="username"/>
+                    <br/>
+                    <select id="option">
+                        <option value="1">Tên tài khoản</option>
+                        <option value="2">Điểm TOIEC</option>
+                    </select>
                 </div>
             </div>
-
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" id="bth-search"
@@ -31,14 +31,13 @@
             </div>
         </form>
     </div>
-    <table id="example" class="table table-striped table-bordered"   cellspacing="0" width="100%">
+    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
         <tr>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Office</th>
-            <th></th>
-            <th></th>
+            <th>No</th>
+            <th>Email</th>
+            <th>Chỉnh sửa</th>
+            <th>Xóa</th>
         </tr>
         </thead>
 
