--- a/src/main/resources/templates/Staff/editUser.html
+++ b/src/main/resources/templates/Staff/editUser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      layout:decorator="Layout/AdminLayout">
+      layout:decorator="Layout/StaffLayout">
 
 <head>
     <meta charset="UTF-8"/>
