--- a/src/main/resources/templates/Staff/user_list.html
+++ b/src/main/resources/templates/Staff/user_list.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml"
       layout:decorator="Layout/StaffLayout">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Danh sách người dùng</title>
 </head>
 
 <body>
-    <div id="page-wapper" layout:fragment="content">
+<div id="page-wapper" layout:fragment="content">
 
-        <div class="row col-lg-12">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="row">
-                        <div th:if="${successDelete}" class="alert alert-success alert-dismissable col-md-5 ">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-                            <strong th:text="${successDelete}"></strong>
-                        </div>
-                        <div th:if="${successEdit}" class="alert  alert-info alert-dismissable col-md-5 ">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-                            <strong th:text="${successEdit}"></strong>
-                        </div>
-                    </div>
-                    <div class="panel-heading">
-                        Danh sách người dùng
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables">
-                            <thead>
-                                <tr>
-                                    <th>NO</th>
-                                    <th>Email </th>
-                                    <th></th>
-                                    <th>Thay đổi thông tin</th>
-                                    <th>Xóa</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="user,iterStat :${user}" class="odd gradeX">
-                                    <td th:text="${iterStat.count}"></td>
-                                    <td th:text="${user.email}"></td>
-                                    <td th:text="${user.role.role}"></td>
-                                    <td><a th:href="@{/home/staff/thay-doi-thong-tin/{id}(id=${user.id})}"><span
-                                            class="fa fa-key" aria-hidden="true"></span></a></td>
-                                    <td><a th:href="@{/home/staff/xoa-tai-khoan/{id}(id=${user.id})}"><span
-                                            class="fa fa-times" aria-hidden="true"></span></a></td>
-                                </tr>
-
-                            </tbody>
-                        </table>
-                        <!-- /.table-responsive -->
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
+    <div class="row col-lg-12">
+        <div class="col-lg-12">
+            <div th:if="${successDelete}" class="alert alert-success alert-dismissable col-md-5 ">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+                <strong th:text="${successDelete}"></strong>
             </div>
-            <!-- /.col-lg-12 -->
+            <div th:if="${successEdit}" class="alert  alert-info alert-dismissable col-md-5 ">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+                <strong th:text="${successEdit}"></strong>
+            </div>
         </div>
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Danh sách người dùng
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables">
+                        <thead>
+                        <tr>
+                            <th>NO</th>
+                            <th>Email</th>
+                            <th></th>
+                            <th>Thay đổi thông tin</th>
+                            <th>Xóa</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="user,iterStat :${user}" class="odd gradeX">
+                            <td th:text="${iterStat.count}"></td>
+                            <td th:text="${user.email}"></td>
+                            <td th:text="${user.role.role}"></td>
+                            <td><a th:href="@{/home/staff/thay-doi-thong-tin/{id}(id=${user.id})}"><span
+                                    class="fa fa-key" aria-hidden="true"></span></a></td>
+                            <td><a th:href="@{/home/staff/xoa-tai-khoan/{id}(id=${user.id})}"><span
+                                    class="fa fa-times" aria-hidden="true"></span></a></td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                    <!-- /.table-responsive -->
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-12 -->
     </div>
+</div>
 
 
 </body>
