--- a/src/main/resources/templates/Layout/StaffLayout.html
+++ b/src/main/resources/templates/Layout/StaffLayout.html
@@ -101,14 +101,14 @@
                         <a th:href="@{/home/staff}"><i class="fa fa-home" aria-hidden="true"></i> Trang chủ</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i> Quản lý người dùng<span
+                        <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i> Quản lý tài khoản<span
                                 class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a th:href="@{/home/staff/add-user}"> Thêm tài khoản trainer</a>
+                                <a th:href="@{/home/staff/add-user}"> Thêm tài khoản </a>
                             </li>
                             <li>
-                                <a th:href="@{/home/staff/user-list}">Danh sách trainer</a>
+                                <a th:href="@{/home/staff/user-list}">Danh sách tài khoản</a>
                             </li>
                         </ul>
                         <!-- /.nav-second-level -->
@@ -168,6 +168,7 @@
 <!-- Custom Theme JavaScript -->
 <script src="../static/dist/js/sb-admin-2.js " th:src="@{/dist/js/sb-admin-2.js}"></script>
 <script src="../static/js/custome.js" th:src="@{/js/custome.js}"></script>
+<script src="../static/js/AjaxJS.js" th:src="@{/js/AjaxJS.js}"></script>
 
 </body>
 
