--- a/src/main/resources/templates/Admin/addUser.html
+++ b/src/main/resources/templates/Admin/addUser.html
@@ -10,7 +10,7 @@
 <div class="container " layout:fragment="content">
     <div>
         <div class="panel-body">
-            <form id="regis" th:action="@{/home/admin/add-user}" th:object="${user}" method="post" role="form">
+            <form id="form" th:action="@{/home/admin/add-user}" th:object="${user}" method="post" role="form">
                 <div class="panel-body">
                     <div class="row">
                         <div class="row">
@@ -45,7 +45,7 @@
                         <div class=" row-border">
                             <div class="col-md-6 col-xs-offset-4">
                                 <button class="btn btn-primary ">Lưu</button>
-                                <button class="btn btn-danger " type="button">Hủy</button>
+                                <button class="btn btn-danger " onclick="resetFunction()" type="button">Hủy</button>
                             </div>
                         </div>
                     </div>
