--- a/src/main/resources/templates/Staff/addCategory.html
+++ b/src/main/resources/templates/Staff/addCategory.html
@@ -10,12 +10,12 @@
 <div class="container " layout:fragment="content">
     <div>
         <div class="panel-body">
-            <form id="regis" th:action="@{/home/staff/add-category}" th:object="${category}" method="post" role="form">
+            <form id="form" th:action="@{/home/staff/add-category}" th:object="${category}" method="post" role="form">
                 <div class="panel-body">
                     <div class="row">
                         <div class="row">
                             <div class="form-group col-md-5">
-                                <label>Tên</label>
+                                <label>Tên category</label>
                                 <input class="form-control" type="text" id="name" name="name"
                                        th:field="*{name}" required="required"
                                 />
@@ -36,7 +36,7 @@
                         <div class=" row-border">
                             <div class="col-md-6 col-xs-offset-4">
                                 <button class="btn btn-primary ">Lưu</button>
-                                <button class="btn btn-danger " type="button">Hủy</button>
+                                <button class="btn btn-danger " onclick="resetFunction()" type="button">Hủy</button>
                             </div>
                         </div>
                     </div>
